k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dental-chart
  labels:
    app.kubernetes.io/name: dental-chart
